--- a/extractproject/css/index.css
+++ b/extractproject/css/index.css
@@ -97,7 +97,7 @@ html, body{
     position:relative;
     width:100%;
     height:100%;
-    background-color: #8fadff;
+    background-color: #fafafa;
     font-size:14px;
 
 }
