菜单栏修改bug

--- a/extractproject/css/index.css
+++ b/extractproject/css/index.css
@@ -147,7 +147,7 @@ html, body{
     border: 3px dashed rgba(34, 40, 255, 0.53);
     border-radius: 3px;
 }
-#pointIdPop{
+#pointIdPop,#deleteContainer{
     position:absolute;
     top:50%;
     left:50%;
