--- a/extractproject/css/index.css
+++ b/extractproject/css/index.css
@@ -303,3 +303,28 @@ html, body{
     line-height: 22px;
     text-align: left;
 }
+.leftLabel {
+    background-color: #2b2b38;
+    width: 100%;
+    height: 5%;
+    margin-bottom: 0px;
+    text-align: center;
+    /* padding-left: 29%; */
+    /* padding-right: 29%; */
+    padding-top: 4.5%;
+    color: white;
+    /* padding: 15px; */
+    border-bottom: 1px #3e3e50 solid;
+}
+
+.dhtmlxribbon_material .dhxrb_highlight1 {
+    background-color: #dcdcdc;
+    border-color: #d2d2d2 !important;
+    box-shadow: 0 0 4px rgba(127,127,127,0.2) inset;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
