--- a/extractproject/css/index.css
+++ b/extractproject/css/index.css
@@ -267,6 +267,42 @@ html, body{
     border: 1px solid #999999;
     z-index: 99;
 }
+#openProjectPop {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%,-50%,0);
+    transform: translate3d(-50%,-50%,0);
+    width: 410px;
+    height: 300px;
+    /*text-align: center;*/
+    background-color: #fff;
+    /*color: #999999;*/
+    font-size: 20px;
+    /*padding: 20px 0;*/
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.7);
+    border-radius: 6px;
+    border: 1px solid #999999;
+    z-index: 99;
+}
+#newProjectPop {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate3d(-50%,-50%,0);
+    transform: translate3d(-50%,-50%,0);
+    width: 410px;
+    height: 300px;
+    /*text-align: center;*/
+    background-color: #fff;
+    /*color: #999999;*/
+    font-size: 20px;
+    /*padding: 20px 0;*/
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.7);
+    border-radius: 6px;
+    border: 1px solid #999999;
+    z-index: 99;
+}
 
 
 .exportPop {
@@ -298,7 +334,7 @@ html, body{
     width: 65%;
 }
 #attribute_table ul li{
-    width: 100%;
+    width: 135%;
     height: 22px;
     line-height: 22px;
     text-align: left;
